Day 13 solution refactoring

--- a/wolfram/day_13.ipynb
+++ b/wolfram/day_13.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lines = ReadList[\"./data/day_13.txt\", String];"
+    "{t, schedule} = Import[\"./data/day_13.txt\", \"CSV\"];"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "schedule = StringSplit[Part[lines, 2], \",\"];"
+    "indexed = {Range[Length[schedule]] - 1, schedule} // Transpose;"
    ]
   },
   {
@@ -24,22 +24,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ChineseRemainder @@ (\n",
-    "    Map[\n",
-    "        Function[{\n",
-    "            ToExpression[Part[#1, 2]] - Part[#1, 1],\n",
-    "            ToExpression[Part[#1, 2]]\n",
-    "        }],\n",
-    "        Select[\n",
-    "            Table[\n",
-    "                {i - 1, schedule[[i]]},\n",
-    "                {i, 1, Length[schedule]}\n",
-    "            ],\n",
-    "            Function[Part[#1, 2] != \"x\"]\n",
-    "        ]\n",
-    "    ] // Transpose\n",
-    ")"
+    "filtered = Cases[indexed, {i_, x_Integer}];"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{rems, mods} = filtered /. {i_, x_} -> {x - i, x} // Transpose;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ChineseRemainder[rems, mods]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
